# swagger.json
@@ -94,6 +94,9 @@
                 },
                 "category": {
                   "example": "any"
+                },
+                "image": {
+                  "example": "any"
                 }
               }
             }
@@ -130,18 +133,63 @@
         "tags": [
           "Products"
         ],
-        "description": "Update a product",
+        "description": "Update a product by ID",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "description": "Product ID"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  },
+                  "price": {
+                    "type": "number"
+                  },
+                  "stock": {
+                    "type": "number"
+                  },
+                  "category": {
+                    "type": "string"
+                  },
+                  "image": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "name",
+                  "price",
+                  "stock",
+                  "image"
+                ]
+              },
+              "example": {
+                "name": "Wireless Headset Updated",
+                "description": "Updated description",
+                "price": 109.99,
+                "stock": 25,
+                "category": "electronics",
+                "image": "https://example.com/images/headset1.jpg"
+              }
+            }
           }
         }
       },
@@ -163,6 +211,39 @@
             "description": "OK"
           }
         }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "Product": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number"
+          },
+          "stock": {
+            "type": "number"
+          },
+          "category": {
+            "type": "string"
+          },
+          "image": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "name",
+          "price",
+          "stock",
+          "image"
+        ]
       }
     }
   }
